<resources>
    <string name="app_name">Tetris</string>
    <string name="hight_score_default">HIGHT SCORE:0</string>
    <string name="new_game">NEW GAME</string>
    <string name="reset_score">RESET SCORE</string>
    <string name="exit">EXIT</string>
    <string name="carrent_score">CARRENT SCORE</string>
    <string name="hight_score">HIGHT SCORE</string>
    <string name="restart">RESTART</string>
</resources>