<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_margin="@dimen/layout_margin_vertical"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:weightSum="10">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/app_name"
           android:textSize="80sp"
           android:textAllCaps="true"/>
       <TextView
           android:id="@+id/tv_hight_score_default"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/hight_score_default"
           android:textSize="20sp"
           android:textAllCaps="true"
           android:layout_marginBottom="@dimen/layout_margin_bottom"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="5"
           android:orientation="vertical"
           android:gravity="center">
           <Button
               android:id="@+id/btn_newgame"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/new_game"/>
           <Button
               android:id="@+id/btn_reset_score"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/reset_score"/>
           <Button
               android:id="@+id/btn_exit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/exit"/>
       </LinearLayout>


   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>